feat: add difficulty setting, shared inventory fixes, completed run config #3 #4 #5 #6