@@ -1,4 +1,4 @@
-package dev.deepcore.records;
+package dev.deepcore.challenge.records;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -13,6 +13,7 @@ import dev.deepcore.logging.DeepCoreLogger;
 import java.io.File;
 import java.lang.reflect.Field;
 import java.sql.SQLException;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.mockito.MockedStatic;
@@ -27,12 +28,18 @@ class RunRecordsServiceTest {
         File dataFolder = new File(".");
         when(plugin.getDataFolder()).thenReturn(dataFolder);
 
-        RunRecordsService service = new RunRecordsService(plugin);
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
 
         java.sql.Connection connection = mock(java.sql.Connection.class);
         java.sql.Statement createStmt = mock(java.sql.Statement.class);
         java.sql.Statement pragmaStmt = mock(java.sql.Statement.class);
+        java.sql.Statement pragma2Stmt = mock(java.sql.Statement.class);
+        java.sql.Statement pragma3Stmt = mock(java.sql.Statement.class);
+        java.sql.Statement alterStmt = mock(java.sql.Statement.class);
+        java.sql.Statement alter2Stmt = mock(java.sql.Statement.class);
         java.sql.ResultSet pragmaRs = mock(java.sql.ResultSet.class);
+        java.sql.ResultSet pragma2Rs = mock(java.sql.ResultSet.class);
+        java.sql.ResultSet pragma3Rs = mock(java.sql.ResultSet.class);
 
         try (MockedStatic<java.sql.DriverManager> driverManager =
                 org.mockito.Mockito.mockStatic(java.sql.DriverManager.class)) {
@@ -40,9 +47,22 @@ class RunRecordsServiceTest {
             driverManager
                     .when(() -> java.sql.DriverManager.getConnection(expectedDbPath))
                     .thenReturn(connection);
-            when(connection.createStatement()).thenReturn(createStmt).thenReturn(pragmaStmt);
+            when(connection.createStatement())
+                    .thenReturn(createStmt)
+                    .thenReturn(pragmaStmt)
+                    .thenReturn(pragma2Stmt)
+                    .thenReturn(alterStmt)
+                    .thenReturn(pragma3Stmt)
+                    .thenReturn(alter2Stmt);
             when(pragmaStmt.executeQuery(anyString())).thenReturn(pragmaRs);
+            when(pragma2Stmt.executeQuery(anyString())).thenReturn(pragma2Rs);
+            when(pragma3Stmt.executeQuery(anyString())).thenReturn(pragma3Rs);
+            // No player_uuid column.
             when(pragmaRs.next()).thenReturn(false);
+            // No components column — triggers ALTER TABLE add.
+            when(pragma2Rs.next()).thenReturn(false);
+            // No difficulty column — triggers ALTER TABLE add.
+            when(pragma3Rs.next()).thenReturn(false);
 
             service.initialize();
         }
@@ -57,7 +77,7 @@ class RunRecordsServiceTest {
         when(plugin.getDeepCoreLogger()).thenReturn(log);
         when(plugin.getDataFolder()).thenReturn(new File("."));
 
-        RunRecordsService service = new RunRecordsService(plugin);
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
 
         java.sql.Connection connection = mock(java.sql.Connection.class);
         java.sql.PreparedStatement insertStatement = mock(java.sql.PreparedStatement.class);
@@ -93,12 +113,15 @@ class RunRecordsServiceTest {
         when(allRecordsRs.getLong("nether_to_end_ms")).thenReturn(11000L, 12000L);
         when(allRecordsRs.getLong("end_to_dragon_ms")).thenReturn(13000L, 14000L);
         when(allRecordsRs.getString("participants")).thenReturn("A, B", "C");
+        when(allRecordsRs.getString("components")).thenReturn("shared_inventory", "");
+        when(allRecordsRs.getString("difficulty")).thenReturn("normal", "");
 
         setConnection(service, connection);
 
         RunRecord created = service.recordRun(
-                40000L, 5000L, 7000L, 9000L, 11000L, 13000L, java.util.Arrays.asList("A", " ", null, "B"));
+                40000L, 5000L, 7000L, 9000L, 11000L, 13000L, Arrays.asList("A", " ", null, "B"), List.of(), "");
         assertEquals("A, B", created.getParticipantsCsv());
+        assertEquals("", created.getComponentsCsv());
 
         assertEquals(1500L, service.getBestOverallTime());
         assertEquals(600L, service.getBestSectionTime("nether_to_end"));
@@ -107,10 +130,40 @@ class RunRecordsServiceTest {
         List<RunRecord> all = service.getAllRecords();
         assertEquals(2, all.size());
         assertEquals("A, B", all.get(0).getParticipantsCsv());
+        assertEquals("shared_inventory", all.get(0).getComponentsCsv());
+        assertEquals("", all.get(1).getComponentsCsv());
 
         when(connection.isClosed()).thenReturn(false);
         service.shutdown();
         verify(connection).close();
+    }
+
+    @Test
+    void recordRun_storesEnabledComponentsCsv() throws Exception {
+        DeepCorePlugin plugin = mock(DeepCorePlugin.class);
+        DeepCoreLogger log = mock(DeepCoreLogger.class);
+        when(plugin.getDeepCoreLogger()).thenReturn(log);
+        when(plugin.getDataFolder()).thenReturn(new File("."));
+
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
+        java.sql.Connection connection = mock(java.sql.Connection.class);
+        java.sql.PreparedStatement insertStatement = mock(java.sql.PreparedStatement.class);
+        when(connection.prepareStatement(anyString())).thenReturn(insertStatement);
+        setConnection(service, connection);
+
+        RunRecord record = service.recordRun(
+                1000L,
+                100L,
+                200L,
+                300L,
+                400L,
+                500L,
+                List.of("Alice"),
+                List.of("shared_inventory", "hardcore"),
+                "normal");
+
+        assertEquals("shared_inventory, hardcore", record.getComponentsCsv());
+        assertEquals(List.of("shared_inventory", "hardcore"), record.getComponentKeys());
     }
 
     @Test
@@ -120,7 +173,7 @@ class RunRecordsServiceTest {
         when(plugin.getDeepCoreLogger()).thenReturn(log);
         when(plugin.getDataFolder()).thenReturn(new File("."));
 
-        RunRecordsService service = new RunRecordsService(plugin);
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
         java.sql.Connection connection = mock(java.sql.Connection.class);
         setConnection(service, connection);
 
@@ -142,7 +195,7 @@ class RunRecordsServiceTest {
         when(plugin.getDeepCoreLogger()).thenReturn(log);
         when(plugin.getDataFolder()).thenReturn(new File("."));
 
-        RunRecordsService service = new RunRecordsService(plugin);
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
         java.sql.Connection connection = mock(java.sql.Connection.class);
         java.sql.Statement statement = mock(java.sql.Statement.class);
         java.sql.ResultSet rs = mock(java.sql.ResultSet.class);
@@ -163,7 +216,7 @@ class RunRecordsServiceTest {
         when(plugin.getDeepCoreLogger()).thenReturn(log);
         when(plugin.getDataFolder()).thenReturn(new File("."));
 
-        RunRecordsService service = new RunRecordsService(plugin);
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
         java.sql.Connection connection = mock(java.sql.Connection.class);
         java.sql.Statement statement = mock(java.sql.Statement.class);
         java.sql.ResultSet rs = mock(java.sql.ResultSet.class);
@@ -184,7 +237,7 @@ class RunRecordsServiceTest {
         when(plugin.getDeepCoreLogger()).thenReturn(log);
         when(plugin.getDataFolder()).thenReturn(new File("."));
 
-        RunRecordsService service = new RunRecordsService(plugin);
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
         java.sql.Connection connection = mock(java.sql.Connection.class);
         java.sql.Statement stmt1 = mock(java.sql.Statement.class);
         java.sql.Statement stmt2 = mock(java.sql.Statement.class);
@@ -210,14 +263,14 @@ class RunRecordsServiceTest {
         when(plugin.getDeepCoreLogger()).thenReturn(log);
         when(plugin.getDataFolder()).thenReturn(new File("."));
 
-        RunRecordsService service = new RunRecordsService(plugin);
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
         java.sql.Connection connection = mock(java.sql.Connection.class);
 
         when(connection.prepareStatement(anyString())).thenThrow(new SQLException("insert failed"));
         setConnection(service, connection);
 
         RunRecord record =
-                service.recordRun(100L, 10L, 20L, 30L, 40L, 50L, java.util.Arrays.asList("A", " ", null, "B"));
+                service.recordRun(100L, 10L, 20L, 30L, 40L, 50L, Arrays.asList("A", " ", null, "B"), List.of(), "");
 
         assertEquals("A, B", record.getParticipantsCsv());
         verify(log)
@@ -233,7 +286,7 @@ class RunRecordsServiceTest {
         when(plugin.getDeepCoreLogger()).thenReturn(log);
         when(plugin.getDataFolder()).thenReturn(new File("."));
 
-        RunRecordsService service = new RunRecordsService(plugin);
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
 
         service.shutdown();
 
@@ -253,7 +306,7 @@ class RunRecordsServiceTest {
         when(plugin.getDeepCoreLogger()).thenReturn(log);
         when(plugin.getDataFolder()).thenReturn(new File("."));
 
-        RunRecordsService service = new RunRecordsService(plugin);
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
         java.sql.Connection connection = mock(java.sql.Connection.class);
         when(connection.isClosed()).thenReturn(false);
         org.mockito.Mockito.doThrow(new java.sql.SQLException("close boom"))
@@ -276,22 +329,36 @@ class RunRecordsServiceTest {
         when(plugin.getDeepCoreLogger()).thenReturn(log);
         when(plugin.getDataFolder()).thenReturn(new File("."));
 
-        RunRecordsService service = new RunRecordsService(plugin);
+        RunRecordsService service = new RunRecordsService(plugin, "records.db");
         java.sql.Connection connection = mock(java.sql.Connection.class);
         java.sql.Statement createStmt = mock(java.sql.Statement.class);
         java.sql.Statement pragmaStmt = mock(java.sql.Statement.class);
         java.sql.Statement dropStmt = mock(java.sql.Statement.class);
         java.sql.Statement recreateStmt = mock(java.sql.Statement.class);
+        java.sql.Statement pragma2Stmt = mock(java.sql.Statement.class);
+        java.sql.Statement pragma3Stmt = mock(java.sql.Statement.class);
         java.sql.ResultSet pragmaRs = mock(java.sql.ResultSet.class);
+        java.sql.ResultSet pragma2Rs = mock(java.sql.ResultSet.class);
+        java.sql.ResultSet pragma3Rs = mock(java.sql.ResultSet.class);
 
         when(connection.createStatement())
                 .thenReturn(createStmt)
                 .thenReturn(pragmaStmt)
                 .thenReturn(dropStmt)
-                .thenReturn(recreateStmt);
+                .thenReturn(recreateStmt)
+                .thenReturn(pragma2Stmt)
+                .thenReturn(pragma3Stmt);
         when(pragmaStmt.executeQuery(anyString())).thenReturn(pragmaRs);
         when(pragmaRs.next()).thenReturn(true, false);
         when(pragmaRs.getString("name")).thenReturn("player_uuid");
+        // After recreate, components column is already present in fresh schema.
+        when(pragma2Stmt.executeQuery(anyString())).thenReturn(pragma2Rs);
+        when(pragma2Rs.next()).thenReturn(true, false);
+        when(pragma2Rs.getString("name")).thenReturn("components");
+        // After recreate, difficulty column is also already present in fresh schema.
+        when(pragma3Stmt.executeQuery(anyString())).thenReturn(pragma3Rs);
+        when(pragma3Rs.next()).thenReturn(true, false);
+        when(pragma3Rs.getString("name")).thenReturn("difficulty");
 
         setConnection(service, connection);
 
